Add disabled to ipv4 address mode options

--- a/product/dialogs/miq_dialogs/miq_provision_vmware_dialogs_template.yaml
+++ b/product/dialogs/miq_dialogs/miq_provision_vmware_dialogs_template.yaml
@@ -235,6 +235,7 @@
           :values:
             static: Static
             dhcp: DHCP
+            disabled: Disabled
           :description: Address Mode
           :required: false
           :display: :edit
