--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1189,6 +1189,10 @@
       :poll: 1.seconds
       :nice_delta: 1
       :thread_shutdown_timeout: 10.seconds
+    :ems_refresh_skeletal_worker:
+      :poll: 1.seconds
+      :nice_delta: 1
+      :thread_shutdown_timeout: 10.seconds
     :event_catcher:
       :defaults:
         :flooding_events_per_minute: 30
