--- a/db/fixtures/notification_types.yml
+++ b/db/fixtures/notification_types.yml
@@ -114,3 +114,8 @@
   :expires_in: 24.hours
   :level: :warning
   :audience: global
+- :name: vm_snapshot_failure
+  :message: 'Failed to %{snapshot_op} snapshot of %{subject}: %{error}'
+  :expires_in: 24.hours
+  :level: :warning
+  :audience: global
